--- a/modulo-01/git-e-github/index.html
+++ b/modulo-01/git-e-github/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Vagrant: Gerenciando máquinas virtuais</li>
+        <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible: Sua Infraestrutura com código</li>
-        <li>Integração Contínua</li>
+        <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
         <li>Kubernetes: Introdução a orquestração de containers'</li>
     </ul>
 </body>
